--- a/AVHRR_noise_characteristics_v4.tex
+++ b/AVHRR_noise_characteristics_v4.tex
@@ -101,7 +101,7 @@ $^{3}$\quad National Centre for Earth Observation, UK}
 
 \section{Introduction}
 \label{introduction}
-
+Changetest
 The Advanced Very High Resolution Radiometer (AVHRR) is one of the most widely used sensors for operational long-term monitoring from space \cite{cracknell_advanced_1997}. It flies on board the National Oceanic and Atmospheric Administration (NOAA) series of polar operational environmental satellites and the European Space Agency (ESA) series of polar orbiting meteorological operational (MetOp) satellites. The first AVHRR sensor was launched on the Television Infrared Observation Satellite (TIROS-N) and came into service on 19 October 1978. Via overlap of AVHRR sensor series data, 37 years of continuous global coverage data is now available \citep{bulgin_avhrr_2018} meaning that the instrument is providing important information on climate-related changes in the global environment. Furthermore, thermal (infrared channel) data from the AVHRR is assimilated into numerical weather prediction (NWP) models, making it central to operational weather forecasting systems \citep{pavelin_nwp_2008}.
 
 Data from the AVHRR visible and infrared channels has been used to determine land surface parameters such as surface reflectance \citep{trishchenko_effects_2009} and normalised difference vegetation index (NDVI)\citep{kidwell_noaa_1997}, and atmospheric parameters such as cloud properties \citep{kawamoto_global_2001,stowe_global_1991} and aerosol optical depth (AOD) \citep{ignatov_operational_2004}. AVHRR thermal data is also used to detect and monitor forest fires \citep{li_review_2001}. One of the most important parameters derived from AVHRR measurements is the global sea surface temperature (SST) \citep{kilpatrick_overview_2001,merchant_gbcs_2005,merchant_oe_2008,merchant_atsr_2012,merchant_sst_2014}. SST is an essential climate variable (ECV) for many climate science applications, including fundamental quantification of the rate of climate change and climate sensitivity. The in-situ SST observing system using drifter buoys has also evolved significantly since the late 1970's \citep{castro_buoy_2012}, and AVHRR-based SSTs have an important complementary role to play in helping understand marine change \citep{belkin_marine_2009,miloslavich_oceans_2018}.
